# tx-graph

./: .gitignore  README.md
api/: .env.sample  Cargo.toml  Dockerfile
api/.sqlx/: query-3b9d403aa2d2b29450269f6c72bf64caf2d6cb71e2f9febe13bc26858cfffde4.json  query-972886007c05bd29a72ba38aed8179a64a9509f442b0c3fb60adb8b562bc0570.json  query-c254bde4c298910e65e66eb663fdf8876e914741b850188fa110739dced9eee3.json  query-f915bb8a49665d68d45d437e001574d54f8ef73b34394077b05164ac644897df.json
api/migrations/: 20250801063513_create_table_contracts.sql  20250801064116_create_table_fn_selectors.sql  20260119000001_add_src_to_contracts.sql
api/src/: config.rs  etherscan.rs  main.rs
ast/: package.json  tsconfig.json
ast/src/: index.ts
ui/: .env.sample  .gitignore  index.html  package.json
ui/src/: App.tsx  config.tsx  evm.ts  index.css  utils.ts
ui/src/api/: index.ts  lib.ts  types.ts
ui/src/ast/: index.ts  types.ts
ui/src/components/: Button.module.css  Button.tsx  ChainSelect.module.css  ChainSelect.tsx  Checkbox.module.css  Checkbox.tsx  CodeViewer.tsx  CopyText.module.css  CopyText.tsx  Explorer.module.css  Explorer.tsx  FileTree.module.css  FileTree.tsx  Modal.module.css  Modal.tsx  Splits.module.css  Splits.tsx
ui/src/components/ast-graph/: index.tsx
ui/src/components/call-graph/: index.tsx
ui/src/contexts/: App.tsx  FileWatch.tsx  Tracer.tsx  WindowSize.tsx
ui/src/foundry/: console.json  index.ts  types.ts
ui/src/hooks/: useAsync.tsx  useFileTree.tsx  useGetTrace.tsx  useOutsideClick.tsx  useSplits.tsx
ui/src/types/: app.ts  file.ts  tx.ts
(+73 files in other folders)
