[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", feature = ["macros"]}
axum-macros = "0.5.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http = "1.3.1"
chrono = { version = "0.4.43", features = ["serde"] }
